<resources>
    <string name="filter_placeholder" translatable="false">%1$s: %2$s</string>
    <string name="loading">Loading…</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="app_details">App Details</string>
    <string name="apk_list">APK Files</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="share_as_zip">Share all as ZIP</string>
    <string name="copy">Copy</string>
    <string name="app_system_details">System Details</string>
    <string name="launch">Launch</string>
    <string name="properties">Properties</string>
    <string name="version_code">Version code</string>
    <string name="signature">Signature</string>
    <string name="time">Time</string>
    <string name="installer_package">Installer Package</string>
    <string name="more_info">More info</string>
    <string name="not_set">Not set</string>
    <string name="app_type_system">System</string>
    <string name="app_type_debug">Debug</string>
    <string name="about_app">About app</string>
    <string name="details_metadata">Metadata (%d)</string>
    <string name="details_services">Services (%d)</string>
    <string name="details_directories">Directories (%d)</string>
    <string name="details_permissions">Permissions (%d)</string>
    <string name="details_shared_libraries">Shared Libraries (%d)</string>
    <string name="details_native_libraries">Native Libraries (%d)</string>
    <string name="details_time">Install: %1$s\nUpdate: %2$s</string>
    <string name="details_sdk">Min: %1$d, Target: %2$d</string>
    <string name="details_other_properties">Other properties</string>
    <string name="data_directory">Data directory</string>
    <string name="apk_directory">APK directory</string>
    <string name="native_lib_directory">Native library directory</string>
    <string name="protected_data_directory">Protected data directory</string>
    <string name="app_run_error">Run error: %s</string>
    <string name="find_in_market">Find in Market</string>
    <string name="show_all_apps">Show all apps</string>
    <string name="sort">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="sort_package">Package</string>
    <string name="type">Type</string>
    <string name="type_all">All</string>
    <string name="type_system">System</string>
    <string name="type_user">User</string>
    <string name="type_debug">Debug</string>
    <string name="installer">Installer</string>
    <string name="installer_all">All</string>
    <string name="installer_vending">Play Store</string>
    <string name="installer_huawei">App Gallery</string>
    <string name="installer_empty">Empty</string>
    <string name="no_results">No results</string>
    <string name="search_apps">Search apps</string>
    <string name="filters_and_sort">Filters and sort</string>
    <string name="applications">Applications</string>
    <string name="app_theme">Theme</string>
    <string name="app_theme_auto">System default</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="filter_target_sdk">Target SDK</string>
    <string name="filter_target_sdk_all">All</string>
    <string name="filter_target_sdk_37" translatable="false">37</string>
    <string name="filter_target_sdk_36" translatable="false">36</string>
    <string name="filter_target_sdk_35" translatable="false">35</string>
    <string name="filter_target_sdk_34" translatable="false">34</string>
    <string name="filter_target_sdk_33" translatable="false">33</string>
</resources>
