<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppDetailsActivity">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_vertical_margin">

                <RelativeLayout
                    android:layout_width="88dp"
                    android:layout_height="88dp">

                    <ImageView
                        android:id="@+id/appLogo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="fitCenter"
                        android:layout_centerInParent="true"
                        android:importantForAccessibility="no"/>

                    <TextView
                        android:id="@+id/appTypeInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_type_system"
                        android:textAllCaps="true"
                        android:textSize="8dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/white"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingRight="4dp"
                        android:paddingLeft="4dp"
                        android:background="@drawable/app_type_label_bg"
                        android:visibility="gone"
                        tools:ignore="SpUsage" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/list_vertical_margin"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:maxLines="2"
                    android:gravity="center_horizontal"
                    android:ellipsize="end"
                    tools:text="My App Name"/>

                <TextView
                    android:id="@+id/appPackage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:maxLines="2"
                    android:gravity="center_horizontal"
                    android:ellipsize="end"
                    tools:text="com.app.package.name"/>

                <TextView
                    android:id="@+id/appVersionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorTertiary"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:maxLines="2"
                    android:gravity="center_horizontal"
                    android:ellipsize="end"
                    tools:text="2.3.1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_vertical_margin"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/actionShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/share"
                    android:padding="16dp"
                    android:scaleType="centerInside"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:tint="?android:attr/textColorPrimary"
                    app:srcCompat="@drawable/ic_share_action_24dp"/>

                <ImageView
                    android:id="@+id/actionCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/copy"
                    android:padding="16dp"
                    android:scaleType="centerInside"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:tint="?android:attr/textColorPrimary"
                    app:srcCompat="@drawable/ic_content_copy"/>

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_system_details"
                    android:padding="16dp"
                    android:scaleType="centerInside"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:tint="?android:attr/textColorPrimary"
                    app:srcCompat="@drawable/ic_info_outline_action"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/launch"
                    android:padding="16dp"
                    android:scaleType="centerInside"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    app:tint="?android:attr/textColorPrimary"
                    app:srcCompat="@drawable/ic_launch_action"/>

            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/actionsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MainAction"
                        android:id="@+id/actionRun"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/launch"
                        app:drawableTopCompat="@drawable/ic_launch_action"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:background="?colorSurface"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MainAction"
                        android:id="@+id/actionUninstall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:drawableTopCompat="@drawable/outline_delete"
                        android:text="@string/action_uninstall"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:background="?colorSurface"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MainAction"
                        android:id="@+id/actionInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:drawableTopCompat="@drawable/ic_info_outline_action"
                        android:text="@string/more_info"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/List_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/properties"/>

            <LinearLayout
                style="@style/List_DoubleItem_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/List_DoubleItem_Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_code"/>

                <TextView
                    style="@style/List_DoubleItem_Value"
                    android:id="@+id/appVersionCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12234234"/>

            </LinearLayout>

            <LinearLayout
                style="@style/List_DoubleItem_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/List_DoubleItem_Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sdk"/>

                <TextView
                    style="@style/List_DoubleItem_Value"
                    android:id="@+id/appSdkInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Min: 16, Target: 28"/>

            </LinearLayout>

            <LinearLayout
                style="@style/List_DoubleItem_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    style="@style/List_DoubleItem_Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signature"/>

                <TextView
                    style="@style/List_DoubleItem_Value"
                    android:id="@+id/appSignature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0F:44:E3:22:67:44:33:98:99:67:AA:22"/>

            </LinearLayout>

            <LinearLayout
                style="@style/List_DoubleItem_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/List_DoubleItem_Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>

                <TextView
                    style="@style/List_DoubleItem_Value"
                    android:id="@+id/appTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Install: 2020-01-11 20:45:12\nUpdate: 2020-01-11 20:45:12"/>

            </LinearLayout>

            <LinearLayout
                style="@style/List_DoubleItem_Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/List_DoubleItem_Key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/installer_package"/>

                <TextView
                    style="@style/List_DoubleItem_Value"
                    android:id="@+id/appInstallerPackage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="com.android.vending"/>

            </LinearLayout>

            <TextView
                style="@style/List_Header"
                android:id="@+id/moreInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Metadata (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/morePermissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Permissions (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Activities (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Services (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreProviders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Content Providers (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreReceivers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Receivers (1)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreDirectories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Directories (3)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreSharedLibraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Shared Libs (3)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreNativeLibraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Native Libs (3)"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/List_SingleItem"
                android:id="@+id/moreOtherProperties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_other_properties" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_bottom_margin" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="?android:colorBackground"
        tools:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</RelativeLayout>